--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -285,7 +285,7 @@
 
 		if (oferta != null)
 		{
-			return Herramientas.Calculadora.HaceTiempo(oferta.FechaDetectado, idioma); 
+			return Herramientas.Calculadora.DiferenciaTiempo(oferta.FechaDetectado, idioma); 
 		}
 		else
 		{
