--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -817,7 +817,7 @@ else
 
 		if (juego.PrecioMinimosHistoricos[0].FechaDetectado.Year > 2023)
 		{
-			mensaje = Herramientas.Calculadora.HaceTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma);
+			mensaje = Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma);
 		}
 		
 		return mensaje;
