--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -49,11 +49,11 @@
 			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
 				<a class="boton-pequeño" style="padding: 0px;" href="@CargarEnlace(juego)" target="_blank">
 					<div class="perfil-flexible-centrado">
-						<div style="width: 18%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="min-height: 100%; min-width: 100%; margin: 3px;" />
+						<div>
+							<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
 						</div>
 
-						<div style="width: 56%; padding: 5px 20px;">
+						<div style="padding: 5px 20px; text-align: left; width: 65%;">
 							<div>@juego.Nombre</div>
 
 							<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
@@ -97,16 +97,18 @@
 							</div>						
 						</div>
 
-						<div style="width: 10%; padding: 4px 25px 4px 0px; text-align: right;">
-							<img src="@CargarImagenTienda(juego)" style="max-width: 100%; max-height: 100%;" />
-						</div>
+						<div style="width: 35%; display: flex; align-items: center; justify-content: center; text-align: center;">
+							<div style="width: 30%;">
+								<img src="@CargarImagenTienda(juego)" style="width: 100%;"/>
+							</div>
 
-						<div style="width: 6%; text-align: center;" class="juego-descuento">
-							@CargarDescuento(juego)
-						</div>
+							<div style="padding: 10px 15px; margin: 0px 30px;" class="juego-descuento">
+								@CargarDescuento(juego)
+							</div>
 
-						<div style="width: 10%; padding: 4px 15px 4px 15px; text-align: center; font-size: 18px;">
-							@CargarPrecio(juego)
+							<div style="font-size: 18px;">
+								@CargarPrecio(juego)
+							</div>
 						</div>
 					</div>
 				</a>
@@ -209,7 +211,7 @@
 
 	private string CargarImagenDRM(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
@@ -221,7 +223,7 @@
 
 	private string CargarImagenTienda(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
@@ -241,7 +243,7 @@
 
 	private string CargarDescuento(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
@@ -255,7 +257,7 @@
 
 	private static string CargarPrecio(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
@@ -281,7 +283,7 @@
 
 	private string CargarDetectado(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
@@ -295,7 +297,7 @@
 
 	private string CargarEnlace(global::Juegos.Juego juego)
 	{
-		JuegoPrecio oferta = juego.PrecioActualesTiendas[0];
+		JuegoPrecio oferta = juego.PrecioMinimosHistoricos[0];
 
 		if (oferta != null)
 		{
