--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -144,7 +144,6 @@
 	.tooltip-relleno {
 		background-color: var(--fondoBotonPequeño);
 		color: var(--colorTexto);
-		text-align: center;
 		border: 1px solid var(--fondoBoton);
 		border-radius: 2px;
 		z-index: 1;
@@ -212,7 +211,7 @@
 					<video src="@tooltipVideo" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
 				}
 
-				<div style="padding: 15px;">
+				<div style="padding: 15px; text-align: center;">
 					<label>@tooltipNombre</label>
 					<div style="display: flex; align-items: center; margin-top: 10px; padding: 5px; text-align: center; justify-content: center;">
 						<div style="margin-right: 20px;">
@@ -382,9 +381,9 @@ else
 				<video src="@tooltipVideo" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
 			}
 
-			<div style="padding: 15px;">
-				<label>@tooltipNombre</label>
-				<div style="display: flex; align-items: center; margin-top: 10px; padding: 5px; text-align: center; justify-content: center;">
+			<div style="padding: 12px;">
+				<label style="padding-left: 5px; padding-right: 5px;">@tooltipNombre</label>
+				<div style="display: flex; align-items: center; margin-top: 5px; padding: 5px; text-align: left; justify-content: left;">
 					<div style="margin-right: 20px;">
 						<img src="@tooltipDRM" style="max-width: 20px; max-height: 20px;" />
 					</div>
@@ -399,18 +398,41 @@ else
 						</div>
 					}
 
+					<div style="margin-right: 15px; background-color: darkgreen; padding: 5px 10px;">
+						@tooltipDescuento
+					</div>
 					<div>
-						@tooltipTiempo
+						@tooltipPrecio
 					</div>
 				</div>
 
 				@if (string.IsNullOrEmpty(tooltipBundles) == false || string.IsNullOrEmpty(tooltipGratis) == false || string.IsNullOrEmpty(tooltipSuscripciones) == false)
 				{
-					<div style="font-size: 13px; margin-top: 10px; padding: 5px;">
-						@tooltipBundles
-						@tooltipGratis
-						@tooltipSuscripciones
-						@* test *@
+					<div style="font-size: 14px; margin-top: 5px; padding: 5px;">
+						<div>
+							@Herramientas.Idiomas.CogerCadena(idioma, "Index.Tooltip1")
+						</div>
+
+						@if (string.IsNullOrEmpty(tooltipBundles) == false)
+						{
+							<div>
+								• @tooltipBundles
+							</div>
+						}
+
+						@if (string.IsNullOrEmpty(tooltipGratis) == false)
+						{
+							<div>
+								• @tooltipGratis
+							</div>
+						}
+
+						@if (string.IsNullOrEmpty(tooltipSuscripciones) == false)
+						{
+							<div>
+								• @tooltipSuscripciones
+							</div>
+						}
 					</div>
 				}
 			</div>
@@ -674,7 +696,23 @@ else
 
 						if (fechaTemporal > DateTime.Now)
 						{
-							noticiasMostrar.Add(noticia);
+							bool añadir = true;
+
+							if (noticiasMostrar.Count > 0)
+							{
+								foreach (var noticiaMostrar in noticiasMostrar)
+								{
+									if (noticiaMostrar.Id == noticia.Id)
+									{
+										añadir = false;
+									}
+								}
+							}
+
+							if (añadir == true)
+							{
+								noticiasMostrar.Add(noticia);
+							}							
 						}
 					}
 				}
@@ -744,6 +782,8 @@ else
 	}
 
 	private string tooltipNombre = string.Empty;
+	private string tooltipDescuento = string.Empty;
+	private string tooltipPrecio = string.Empty;
 	private string tooltipDRM = string.Empty;
 	private string tooltipTienda = string.Empty;
 	private string tooltipTiempo = string.Empty;
@@ -756,6 +796,8 @@ else
 	private void CargarTooltip(MouseEventArgs args, global::Juegos.Juego juego)
 	{
 		tooltipNombre = juego.Nombre;
+		tooltipDescuento = CargarDescuento(juego);
+		tooltipPrecio = CargarPrecio(juego);
 		tooltipDRM = CargarDRM(juego);
 		tooltipTienda = CargarIconoTienda(juego);
 		tooltipTiempo = CargarFechaDetectado(juego);
@@ -809,12 +851,26 @@ else
 
 		if (juego.Gratis != null)
 		{
-			tooltipGratis = juego.Gratis.Count.ToString();
+			if (juego.Gratis.Count == 1)
+			{
+				tooltipGratis = Herramientas.Idiomas.CogerCadena(idioma, "Index.Tooltip4");
+			}
+			else if (juego.Gratis.Count > 1)
+			{
+				tooltipGratis = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Index.Tooltip5"), juego.Gratis.Count.ToString());
+			}
 		}
 
 		if (juego.Suscripciones != null)
 		{
-			tooltipSuscripciones = juego.Suscripciones.Count.ToString();
+			if (juego.Suscripciones.Count == 1)
+			{
+				tooltipSuscripciones = Herramientas.Idiomas.CogerCadena(idioma, "Index.Tooltip6");
+			}
+			else if (juego.Suscripciones.Count > 1)
+			{
+				tooltipSuscripciones = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Index.Tooltip7"), juego.Suscripciones.Count.ToString());
+			}
 		}
 	}
 
