--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -630,7 +630,7 @@ else
 
 						if (p1 != null && p2 != null)
 						{
-							return p2.FechaUltimoMinimo.CompareTo(p1.FechaUltimoMinimo);
+							return p2.FechaDetectado.CompareTo(p1.FechaDetectado);
 						}
 						else
 						{
